--- a/tp_cliente/src/fxmls/SideMenu_4.fxml
+++ b/tp_cliente/src/fxmls/SideMenu_4.fxml
@@ -111,7 +111,7 @@
             <Insets top="3.0" />
          </VBox.margin>
       </JFXButton>
-      <Label text="Insumos" textFill="WHITE">
+      <Label text="Prendas" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
