--- a/tp_cliente/src/fxmls/PrendaAlta.fxml
+++ b/tp_cliente/src/fxmls/PrendaAlta.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="668.0" prefWidth="1366.0" style="-fx-background-color: #f3f3f3;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ClienteAltaController">
+<AnchorPane prefHeight="668.0" prefWidth="1366.0" style="-fx-background-color: #f3f3f3;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PrendaAltaController">
    <children>
       <StackPane fx:id="stackPane" layoutX="472.0" layoutY="103.0" prefHeight="118.0" prefWidth="426.0" style="-fx-background-color: #f3f3f3;" />
       <VBox layoutX="31.0" layoutY="183.0" prefHeight="464.0" prefWidth="420.0" style="-fx-border-radius: 10 10 0 0; -fx-background-radius: 10 10 0 0; -fx-background-color: #ffffff;">
@@ -26,7 +26,7 @@
                   <Font size="15.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtNombre1" focusColor="#c06c84" labelFloat="true" promptText="Color" unFocusColor="#6c5b7b">
+            <JFXTextField fx:id="txtColor" focusColor="#c06c84" labelFloat="true" promptText="Color" unFocusColor="#6c5b7b">
                <font>
                   <Font size="15.0" />
                </font>
@@ -34,12 +34,12 @@
                   <Insets left="50.0" right="50.0" top="30.0" />
                </VBox.margin>
             </JFXTextField>
-            <JFXComboBox fx:id="comboTalle" prefHeight="25.0" prefWidth="346.0" promptText="Talle">
+            <JFXComboBox fx:id="comboTalle" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Talle">
                <VBox.margin>
                   <Insets left="50.0" right="50.0" top="30.0" />
                </VBox.margin>
             </JFXComboBox>
-            <JFXTextField fx:id="txtCosto" focusColor="#c06c84" labelFloat="true" promptText="Costo produccion" unFocusColor="#6c5b7b">
+            <JFXTextField fx:id="txtCosto" focusColor="#c06c84" labelFloat="true" promptText="Costo produccion real" unFocusColor="#6c5b7b">
                <VBox.margin>
                   <Insets left="50.0" right="50.0" top="30.0" />
                </VBox.margin>
@@ -63,7 +63,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <JFXSlider fx:id="sliderGanancia" blockIncrement="5.0" max="150.0" min="10.0" showTickLabels="true" value="25.0">
+            <JFXSlider fx:id="sliderGanancia" blockIncrement="5.0" max="90.0" min="10.0" showTickLabels="true" value="25.0">
                <VBox.margin>
                   <Insets left="50.0" right="50.0" top="30.0" />
                </VBox.margin>
@@ -123,7 +123,7 @@
             </JFXTextField>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <JFXComboBox fx:id="comboEstado" prefHeight="25.0" prefWidth="346.0" promptText="Estado produccion">
+                  <JFXComboBox fx:id="comboEstado" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Estado produccion">
                      <HBox.margin>
                         <Insets left="50.0" right="50.0" top="30.0" />
                      </HBox.margin>
@@ -141,12 +141,12 @@
             </Label>
          </children>
       </Pane>
-      <VBox layoutX="915.0" layoutY="190.0" prefHeight="232.0" prefWidth="420.0" style="-fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10; -fx-background-color: #ffffff;">
+      <VBox layoutX="917.0" layoutY="52.0" prefHeight="232.0" prefWidth="411.0" style="-fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10; -fx-background-color: #ffffff;">
          <effect>
             <DropShadow blurType="GAUSSIAN" />
          </effect>
          <children>
-            <JFXTreeTableView prefHeight="364.0" prefWidth="420.0">
+            <JFXTreeTableView fx:id="vistaTabla" prefHeight="222.0" prefWidth="383.0">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
@@ -156,7 +156,7 @@
             </JFXTreeTableView>
          </children>
       </VBox>
-      <JFXButton fx:id="btnEnviar" layoutX="1046.0" layoutY="583.0" onAction="#agregarPrenda" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #8ac96a;" text="Agregar prenda" textFill="WHITE">
+      <JFXButton fx:id="btnEnviar" layoutX="1158.0" layoutY="586.0" onAction="#agregarPrenda" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #8ac96a;" text="Agregar prenda" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -164,7 +164,7 @@
             <DropShadow blurType="GAUSSIAN" height="18.0" radius="8.5" width="18.0" />
          </effect>
       </JFXButton>
-      <JFXButton fx:id="btnLimpiar" buttonType="RAISED" layoutX="1046.0" layoutY="494.0" onAction="#limpiarCampos" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #ed6861;" text="Limpiar campos" textFill="WHITE">
+      <JFXButton fx:id="btnLimpiar" buttonType="RAISED" layoutX="928.0" layoutY="586.0" onAction="#limpiarCampos" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: #ed6861;" text="Limpiar campos" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -172,9 +172,40 @@
             <DropShadow blurType="GAUSSIAN" height="18.0" radius="8.5" width="18.0" />
          </effect>
       </JFXButton>
-      <Pane layoutX="986.0" layoutY="145.0" prefHeight="47.0" prefWidth="279.0" style="-fx-border-radius: 5 5 0 0; -fx-background-radius: 5 5 0 0; -fx-background-color: #8b769e;">
+      <Pane layoutX="986.0" layoutY="14.0" prefHeight="47.0" prefWidth="279.0" style="-fx-border-radius: 5 5 0 0; -fx-background-radius: 5 5 0 0; -fx-background-color: #8b769e;">
          <children>
             <Label layoutX="41.0" layoutY="9.0" text="PRENDAS ACTUALES" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <VBox layoutX="920.0" layoutY="349.0" prefHeight="202.0" prefWidth="411.0" style="-fx-background-radius: 10 10 10 10; -fx-border-radius: 10 10 10 10; -fx-background-color: #ffffff;">
+         <children>
+            <JFXComboBox fx:id="comboInsumo1" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Insumo 1">
+               <VBox.margin>
+                  <Insets left="50.0" right="50.0" top="30.0" />
+               </VBox.margin>
+            </JFXComboBox>
+            <JFXComboBox fx:id="comboInsumo2" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Insumo 2">
+               <VBox.margin>
+                  <Insets left="50.0" right="50.0" top="30.0" />
+               </VBox.margin>
+            </JFXComboBox>
+            <JFXComboBox fx:id="comboInsumo3" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Insumo 3">
+               <VBox.margin>
+                  <Insets left="50.0" right="50.0" top="30.0" />
+               </VBox.margin>
+            </JFXComboBox>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </VBox>
+      <Pane layoutX="986.0" layoutY="311.0" prefHeight="47.0" prefWidth="279.0" style="-fx-border-radius: 5 5 0 0; -fx-background-radius: 5 5 0 0; -fx-background-color: #8b769e;">
+         <children>
+            <Label layoutX="93.0" layoutY="9.0" text="INSUMOS" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
