--- a/tp_cliente/src/fxmls/OrdenProduccionFabricar.fxml
+++ b/tp_cliente/src/fxmls/OrdenProduccionFabricar.fxml
@@ -172,7 +172,7 @@
                   </Label>
                </children>
             </GridPane>
-            <JFXButton fx:id="btnEnviar" layoutX="425.0" layoutY="292.0" onAction="#fabricarOrden" prefHeight="31.0" prefWidth="242.0" style="-fx-background-color: #8ac96a;" text="Fabricar" textFill="WHITE">
+            <JFXButton fx:id="btnEnviar" disable="true" layoutX="425.0" layoutY="292.0" onAction="#fabricarOrden" prefHeight="31.0" prefWidth="242.0" style="-fx-background-color: #8ac96a;" text="Fabricar" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
