--- a/tp_cliente/src/fxmls/SideMenu_6.fxml
+++ b/tp_cliente/src/fxmls/SideMenu_6.fxml
@@ -66,14 +66,6 @@
             <Insets />
          </VBox.margin>
       </JFXButton>
-      <JFXButton fx:id="btnBuscarSucursal" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Buscar sucursal" textAlignment="RIGHT">
-         <font>
-            <Font size="14.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="3.0" />
-         </VBox.margin>
-      </JFXButton>
       <Label text="Prendas" textFill="WHITE">
          <VBox.margin>
             <Insets top="10.0" />
@@ -90,7 +82,7 @@
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnBuscarPrenda" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Buscar prenda" textAlignment="RIGHT">
+      <JFXButton fx:id="btnBuscarPrenda" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Ver almacen prendas" textAlignment="RIGHT">
          <font>
             <Font size="14.0" />
          </font>
@@ -109,12 +101,12 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnAltaInsumo" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Alta de insumo" textAlignment="RIGHT">
+      <JFXButton fx:id="btnAltaInsumo" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Alta de insumos" textAlignment="RIGHT">
          <font>
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnBuscarInsumo" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Buscar insumo" textAlignment="RIGHT">
+      <JFXButton fx:id="btnBuscarInsumo" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Ver almacen insumos" textAlignment="RIGHT">
          <font>
             <Font size="14.0" />
          </font>
