--- a/tp_cliente/src/fxmls/PrendaAlta.fxml
+++ b/tp_cliente/src/fxmls/PrendaAlta.fxml
@@ -181,27 +181,58 @@
             </Label>
          </children>
       </Pane>
-      <VBox layoutX="920.0" layoutY="349.0" prefHeight="202.0" prefWidth="411.0" style="-fx-background-radius: 10 10 10 10; -fx-border-radius: 10 10 10 10; -fx-background-color: #ffffff;">
-         <children>
-            <JFXComboBox fx:id="comboInsumo1" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Insumo 1">
-               <VBox.margin>
-                  <Insets left="50.0" right="50.0" top="30.0" />
-               </VBox.margin>
-            </JFXComboBox>
-            <JFXComboBox fx:id="comboInsumo2" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Insumo 2">
-               <VBox.margin>
-                  <Insets left="50.0" right="50.0" top="30.0" />
-               </VBox.margin>
-            </JFXComboBox>
-            <JFXComboBox fx:id="comboInsumo3" labelFloat="true" prefHeight="25.0" prefWidth="346.0" promptText="Insumo 3">
-               <VBox.margin>
-                  <Insets left="50.0" right="50.0" top="30.0" />
-               </VBox.margin>
-            </JFXComboBox>
-         </children>
+      <VBox layoutX="920.0" layoutY="349.0" prefHeight="202.0" prefWidth="401.0" style="-fx-background-radius: 10 10 10 10; -fx-border-radius: 10 10 10 10; -fx-background-color: #ffffff;">
          <effect>
             <DropShadow />
          </effect>
+         <children>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <JFXComboBox fx:id="comboInsumo1" labelFloat="true" prefHeight="25.0" prefWidth="209.0" promptText="Insumo 1">
+                     <GridPane.margin>
+                        <Insets left="50.0" top="30.0" />
+                     </GridPane.margin>
+                  </JFXComboBox>
+                  <JFXComboBox fx:id="comboInsumo2" labelFloat="true" prefHeight="25.0" prefWidth="210.0" promptText="Insumo 2" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="50.0" top="50.0" />
+                     </GridPane.margin>
+                  </JFXComboBox>
+                  <JFXComboBox fx:id="comboInsumo3" labelFloat="true" prefHeight="25.0" prefWidth="211.0" promptText="Insumo 3" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="50.0" top="80.0" />
+                     </GridPane.margin>
+                  </JFXComboBox>
+                  <JFXTextField fx:id="txtCant1" labelFloat="true" promptText="Cantidad 1" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="30.0" right="50.0" top="24.0" />
+                     </GridPane.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="txtCant2" labelFloat="true" promptText="Cantidad 2" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="30.0" right="50.0" top="44.0" />
+                     </GridPane.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="txtCant3" labelFloat="true" promptText="Cantidad 3" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="30.0" right="50.0" top="74.0" />
+                     </GridPane.margin>
+                  </JFXTextField>
+               </children>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </GridPane>
+         </children>
       </VBox>
       <Pane layoutX="986.0" layoutY="311.0" prefHeight="47.0" prefWidth="279.0" style="-fx-border-radius: 5 5 0 0; -fx-background-radius: 5 5 0 0; -fx-background-color: #8b769e;">
          <children>
